# test-forge

./: .gitignore  Makefile  README.md  codebase.txt  orchestrator.py  pyproject.toml  reporter.py  requirements.txt  runner.py  tox.ini
.github/workflows/: cleanup-stale-prs.yml  playwright.yml  test-forge.yml
agents/: ci-architect.md  test-architect-reviewer-agent.md
docs/: architecture.md  stagehand_plan.md  testing.md
scripts/: generate_dashboard.py
src/data/: data.json
src/framework/: flaky_detection.py
src/framework/ai/: ai_helper.py
src/framework/core/: failure_classification.py  flaky_detection.py
src/framework/no_ai/: dom_extractor.py  healer.py  strategies.py
src/framework/self_healing/: __init__.py  healer.py
src/framework/stagehand/: __init__.py  agent.py
src/pages/: Cart.py  Checkout.py  Inventory.py  LoginPage.py
src/testing/: ai_helper.py  failure_classification.py  flaky_detection.py
src/testing/self_healing/: dom_extractor.py  healer.py  strategies.py
src/testing/stagehand/: agent.py
src/tests/utils/: helpers.py
tests/: conftest.py  test_checkout.py  test_inventory.py  test_login.py  test_logout.py
tests/ai/: test_ai_flows.py
tests/no_ai/: test_no_ai_flows.py
tests/stagehand/: test_stagehand_flows.py
tests/utils/: helpers.py  test_testing_core.py
