[build-system]
requires = ["setuptools>=61","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-forge"
version = "0.1.0"
description = "Playwright-based POM test framework for demo and learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Core runtime dependencies — only what is actually imported
dependencies = [
  "playwright==1.49.1",
  "click==8.1.7",
]

[project.optional-dependencies]
# Install test dependencies with: pip install -e .[test]
test = [
  "pytest==8.2.2",
  "pytest-html==4.1.1",
  "pytest-playwright==0.6.2",
  "pytest-xdist==3.6.1",
]

[project.urls]
"Homepage" = "https://github.com/PrashantSinghT99/sauce-playwright-pom"
"Repository" = "https://github.com/PrashantSinghT99/sauce-playwright-pom"

[tool.pytest.ini_options]
# Let pytest read tests/ by default
testpaths = ["tests"]
addopts = "-ra -q"
python_files = ["test_*.py"]

