[build-system]
requires = ["setuptools>=61","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-forge"
version = "0.1.0"
description = "Playwright-based POM test framework for demo and learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Core runtime dependencies — only what is actually imported
dependencies = [
  "playwright==1.49.1",
  "click==8.1.7",
]

[project.optional-dependencies]
# Install test dependencies with: pip install -e .[test]
test = [
  "pytest==8.2.2",
  "pytest-html==4.1.1",
  "pytest-playwright==0.6.2",
  "pytest-xdist==3.6.1",
]
dev = [
  "ruff>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/PrashantSinghT99/test-forge"
"Repository" = "https://github.com/PrashantSinghT99/test-forge"

[tool.pytest.ini_options]
# Let pytest read tests/ by default
testpaths = ["tests"]
addopts = "-ra -q"
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
# Target Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable: pycodestyle (E/W), pyflakes (F), isort (I), bugbear (B)
select = ["E", "W", "F", "I", "B"]
ignore = [
  "E501",   # line too long — handled by formatter
  "B008",   # function calls in default args (common in pytest fixtures)
  "B904",   # raise from inside except — not always applicable
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
